Esse commit serve para criar a janela de login

--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
     <header>
         <h1>Bem vindo  beluguinha</h1>
     </header>
+    <section>
+        <div>
+            <h2>Login</h2>
+           
+            <input type="email" placeholder="E-mail">
+            
+            <input type="password" placeholder="Password">
+            <button>Enviar</button>
+
+        </div>
+    </section>
 </body>
 </html>
